ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer 
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: api-key, token, content-type
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - nginx.aplicamos.com.br
    - aplicamos-bookmark.aplicamos.com.br
    - aplicamos-crawl.aplicamos.com.br
    secretName: letsencrypt-prod
  rules:
    - host: nginx.aplicamos.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-example
                port:
                  number: 80
    - host: aplicamos-bookmark.aplicamos.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aplicamos-bookmark
                port:
                  number: 80
    - host: aplicamos-crawl.aplicamos.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aplicamos-crawl
                port:
                  number: 80
